# gitingest-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/plans/: 2025-01-20-gitingest-mcp-design.md  2025-01-20-implementation.md
server/: __init__.py  gitingest_wrapper.py  main.py  mcp_handler.py  prompts.py
tests/: test_gitingest_wrapper.py  test_mcp_handler.py
